[build-system]
requires = ["briefcase"]

[tool.briefcase]
project_name = "Hello World"
bundle = "com.example"
version = "0.0.1"
url = "http://example.com"
license = "BSD license"
author = 'Russell Keith-Magee'
author_email = "russell@keith-magee.com"

[tool.briefcase.app.helloworld]
formal_name = "Hello World"
description = "An app that does lots of stuff"
icon = "src/helloworld/resources/helloworld"
sources = ['src/helloworld']
requires = []


[tool.briefcase.app.helloworld.macOS]
requires = [
    'toga-cocoa==0.3.0.dev15',
]

[tool.briefcase.app.helloworld.linux]
requires = [
    'toga-gtk==0.3.0.dev15',
]

[tool.briefcase.app.helloworld.windows]
requires = [
    'toga-winforms==0.3.0.dev15',
]

# Mobile deployments
[tool.briefcase.app.helloworld.iOS]
requires = [
    'toga-iOS==0.3.0.dev15',
]

[tool.briefcase.app.helloworld.android]
requires = [
    'toga-android==0.3.0.dev15',
]
